# steel-connections

./: .gitignore  AISC_358_16_TEST_CASE.md  CHANGES_SUMMARY_FA.txt  GRAPHICS_CHANGES_FINAL_SUMMARY_FA.md  GRAPHICS_FIXES_SUMMARY_EN.md  GRAPHICS_FIXES_SUMMARY_FA.md  README.md  TESTING_GUIDE_FA.md  build.bat  install.bat  launch.ps1  pyproject.toml  run.bat  setup_steel_connections.vbs  steel_connections.spec  update.bat
hooks/: hook-OCC.py
installer/: setup.iss
prompts/: wufw_prompt.md
src/steel_connections/: __init__.py  bfp_connection.py  bfp_connection_aisc358.py  bfp_connection_design.py  connection_types.py  connections.py  continuity_plate.py  design_result.py  doubler_plate.py  main_window.py  model_io.py  steel_connection_complete.py  steel_moment_connection.py  wufw_connection.py  wufw_defaults.py  wufw_design_calculator.py  wufw_rules.py
src/steel_connections/cad/: bfp_cad.py  wufw_cad.py
src/steel_connections/component/: __init__.py  bolt.py  plate.py
src/steel_connections/data/: io.py
src/steel_connections/gui/: dim_sketch.py  launcher.py  module_catalog.py  toggle_button.py  viewer_3d.py
tests/: open_etabs.py  test_bfp_connection.py  test_bfp_connection_2.py  test_bfp_connection_etabs.py  test_continuity_plate.py  test_doubler_plate.py
tests/geometry/: test_geometry.py
tests/member/: test_member.py
tests/models/: Pakan_Edari_1403_11_14_Main_V22.EDB
tests/wufw/: test_wufw_benchmarks.py  test_wufw_examples_aisc358.py  test_wufw_geometry_limits.py  test_wufw_seismic_checks.py  test_wufw_strength_checks.py
(+23 files in other folders)
